2009-01-20  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py: Replace ActionBackup.created by a DateTime.
	Under the awful MySQL:
	ALTER TABLE `action_backup` CHANGE `created` `created` datetime NOT NULL

2009-01-20  Claude Paroz  <claude@2xlibre.net>

	* templates/languages/language_release_stats.html: Strip HTML tags from
	error description.
	Fixes bug #568159.

2009-01-20  Claude Paroz  <claude@2xlibre.net>

	* vertimus/views.py: Action_db2 was in fact an ActionAbstract object.

2009-01-20  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Emit pot_has_changed signal.
	* stats/signals.py: Signal emitted by stats app (pot_has_changed).
	* templates/vertimus/vertimus_detail.html: Add link to merged file below
	original file.
	* templates/vertimus/vertimus_diff.html: Add ending note about both files
	being merged with latest pot file.
	* vertimus/models.py: New functions related to merged files. Implement and
	connect signals for merging/updating/deleting merged po files.
	* vertimus/views.py: Do the diff with merged files.

2009-01-19  Claude Paroz  <claude@2xlibre.net>

	* languages/models.py: Allow for empty team in Language class.
	* people/models.py: Also exclude empty values while cleaning unactivated
	accounts (forms like to enter empty values in models :-( ).

2009-01-19  Claude Paroz  <claude@2xlibre.net>

	* teams/views.py: Provide for the case when there is no coordinator for a
	team.

2009-01-18  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py: Add the action 'Reserve for proofreading'
	to the Proofread state.
	* vertimus/tests/__init__.py: Updated unit test.

2009-01-18  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* README: Add reference to OpenID note.

2009-01-18  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* vertimus/models.py: Order by ID instead of created, it avoids a
	possible problem with the dumb MySQL database (where datetime